completed task css complete

--- a/index.html
+++ b/index.html
@@ -71,6 +71,19 @@
             <button class="toggleSubtask">▼</button>
           </div>
         </div>
+        <div class="currentTaskContainer">
+          <!-- 여기에 main task가 js로 들어올 예정 -->
+          <div class="mainTaskEx">
+            <span class="mainTaskName">스터디 회의 준비</span>
+            <div class="taskDueDate">종료일: 2025-04-10</div>
+          </div>
+          <div class="taskButtons">
+            <button class="edit">✎</button>
+            <!-- 접기/펼치기 버튼 -->
+            <button class="toggleSubtask">▼</button>
+          </div>
+        </div>
+        
 
         <!-- 하위 태스크: 기본은 숨김 -->
         <div class="subtaskContainer hidden">
@@ -101,6 +114,23 @@
           <div class="completedTaskItem">
             <div class="completedTaskTitle">할 일 제목</div>
             <div class="completedTaskDate">2025-04-07</div>
+          </div>
+          <div class="completedTaskItem">
+            <div class="completedTaskTitle">할 일 제목</div>
+            <div class="completedTaskDate">2025-04-07</div>
+          </div>
+          <div class="completedTaskItem">
+            <div class="completedTaskTitle">할 일 제목</div>
+            <div class="completedTaskDate">2025-04-07</div>
+          </div>
+          <div class="completedTaskItem">
+            <div class="completedTaskTitle">할 일 제목</div>
+            <div class="completedTaskDate">2025-04-07</div>
+          </div>
+          <div class="completedTaskItem">
+            <div class="completedTaskTitle">할 일 제목</div>
+            <div class="completedTaskDate">2025-04-07</div>
+          </div>
           </div>
         </div>
       </section>
