--- a/index.html
+++ b/index.html
@@ -19,37 +19,116 @@
     <main>
       <!-- 백로그 -->
       <section class="backLog">
-        <h3 class="sectionTitle">Back Log</h3>
-        <hr />
+        <div class="backlogFixedHeader">
+          <h3 class="sectionTitle">Back Log</h3>
+          <hr />
+        </div>
+
         <!-- 백로그 검색 및 추가 -->
         <div class="backlogHeader">
           <input type="text" placeholder="Search tasks..." class="searchBar" />
           <button class="searchButton">🔍︎</button>
           <button class="addTask">+</button>
         </div>
+        <div class="backlogScrollArea">
+          <!-- 백로그 태스크 -->
+          <div class="taskContainer">
+            <!-- 메인 태스크 -->
+            <div class="maintaskContainer">
+              <input type="text" class="taskContent" />
 
-        <!-- 백로그 태스크 -->
-        <div class="taskContainer">
-          <!-- 메인 태스크 -->
-          <div class="maintaskContainer">
-            <input type="text" class="taskContent" />
-
-            <div class="importanceDropdown">
-              <div class="selected">
-                <span class="circle high"></span>
-                <span class="label">상</span>
+              <div class="importanceDropdown">
+                <div class="selected">
+                  <span class="circle high"></span>
+                  <span class="label">상</span>
+                </div>
+                <ul class="dropdownOptions hidden">
+                  <li data-value="1"><span class="circle high"></span> 상</li>
+                  <li data-value="2"><span class="circle medium"></span> 중</li>
+                  <li data-value="3"><span class="circle low"></span> 하</li>
+                </ul>
               </div>
-              <ul class="dropdownOptions hidden">
-                <li data-value="1"><span class="circle high"></span> 상</li>
-                <li data-value="2"><span class="circle medium"></span> 중</li>
-                <li data-value="3"><span class="circle low"></span> 하</li>
-              </ul>
-            </div>
 
-            <button class="edit">✎</button>
-            <button class="delete">🗑︎</button>
-            <div class="finishDateContainer">
-              <input type="date" class="finishDateContent" />
+              <button class="edit">✎</button>
+              <button class="delete">🗑︎</button>
+              <div class="finishDateContainer">
+                <input type="date" class="finishDateContent" />
+              </div>
+            </div>
+          </div>
+          <!-- 백로그 태스크 -->
+          <div class="taskContainer">
+            <!-- 메인 태스크 -->
+            <div class="maintaskContainer">
+              <input type="text" class="taskContent" />
+
+              <div class="importanceDropdown">
+                <div class="selected">
+                  <span class="circle high"></span>
+                  <span class="label">상</span>
+                </div>
+                <ul class="dropdownOptions hidden">
+                  <li data-value="1"><span class="circle high"></span> 상</li>
+                  <li data-value="2"><span class="circle medium"></span> 중</li>
+                  <li data-value="3"><span class="circle low"></span> 하</li>
+                </ul>
+              </div>
+
+              <button class="edit">✎</button>
+              <button class="delete">🗑︎</button>
+              <div class="finishDateContainer">
+                <input type="date" class="finishDateContent" />
+              </div>
+            </div>
+          </div>
+          <!-- 백로그 태스크 -->
+          <div class="taskContainer">
+            <!-- 메인 태스크 -->
+            <div class="maintaskContainer">
+              <input type="text" class="taskContent" />
+
+              <div class="importanceDropdown">
+                <div class="selected">
+                  <span class="circle high"></span>
+                  <span class="label">상</span>
+                </div>
+                <ul class="dropdownOptions hidden">
+                  <li data-value="1"><span class="circle high"></span> 상</li>
+                  <li data-value="2"><span class="circle medium"></span> 중</li>
+                  <li data-value="3"><span class="circle low"></span> 하</li>
+                </ul>
+              </div>
+
+              <button class="edit">✎</button>
+              <button class="delete">🗑︎</button>
+              <div class="finishDateContainer">
+                <input type="date" class="finishDateContent" />
+              </div>
+            </div>
+          </div>
+          <!-- 백로그 태스크 -->
+          <div class="taskContainer">
+            <!-- 메인 태스크 -->
+            <div class="maintaskContainer">
+              <input type="text" class="taskContent" />
+
+              <div class="importanceDropdown">
+                <div class="selected">
+                  <span class="circle high"></span>
+                  <span class="label">상</span>
+                </div>
+                <ul class="dropdownOptions hidden">
+                  <li data-value="1"><span class="circle high"></span> 상</li>
+                  <li data-value="2"><span class="circle medium"></span> 중</li>
+                  <li data-value="3"><span class="circle low"></span> 하</li>
+                </ul>
+              </div>
+
+              <button class="edit">✎</button>
+              <button class="delete">🗑︎</button>
+              <div class="finishDateContainer">
+                <input type="date" class="finishDateContent" />
+              </div>
             </div>
           </div>
         </div>
@@ -57,50 +136,136 @@
 
       <!-- 현재 태스크 -->
       <section class="current">
+        <div class="currentHeader">
         <h3 class="sectionTitle">Current Tasks</h3>
         <hr />
-        <div class="currentTaskContainer">
-          <!-- 여기에 main task가 js로 들어올 예정 -->
-          <div class="mainTaskEx">
-            <span class="mainTaskName">스터디 회의 준비</span>
-            <div class="taskDueDate">종료일: 2025-04-10</div>
-          </div>
-          <div class="taskButtons">
-            <button class="edit">✎</button>
-            <!-- 접기/펼치기 버튼 -->
-            <button class="toggleSubtask">▼</button>
-          </div>
-        </div>
-        <div class="currentTaskContainer">
-          <!-- 여기에 main task가 js로 들어올 예정 -->
-          <div class="mainTaskEx">
-            <span class="mainTaskName">스터디 회의 준비</span>
-            <div class="taskDueDate">종료일: 2025-04-10</div>
-          </div>
-          <div class="taskButtons">
-            <button class="edit">✎</button>
-            <!-- 접기/펼치기 버튼 -->
-            <button class="toggleSubtask">▼</button>
-          </div>
-        </div>
-        
-
-        <!-- 하위 태스크: 기본은 숨김 -->
-        <div class="subtaskContainer hidden">
-          <!-- 여기에 하위태스크 js 들어옴 -->
-          <div class="subtaskItem">
-            <input type="checkbox" class="subtaskCheck" />
-            <span class="subtaskText">하위 태스크 내용</span>
-            <button class="subtaskDelete">🗑︎</button>
-          </div>
-          <div class="subtaskItem">
-            <input type="checkbox" class="subtaskCheck" />
-            <span class="subtaskText">하위 태스크 내용2</span>
-            <button class="subtaskDelete">🗑︎</button>
+      </div>
+      <div class="currentScrollArea">
+        <div class="currentTaskWrapper">
+          <div class="currentTaskContainer">
+            <!-- 여기에 main task가 js로 들어올 예정 -->
+            <div class="mainTaskEx">
+              <span class="mainTaskName">스터디 회의 준비</span>
+              <div class="taskDueDate">종료일: 2025-04-10</div>
+            </div>
+            <div class="taskButtons">
+              <button class="edit">✎</button>
+              <!-- 접기/펼치기 버튼 -->
+              <button class="toggleSubtask">▼</button>
+            </div>
           </div>
 
-          <button class="addSubtaskBtn">+</button>
+          <!-- 하위 태스크: 기본은 숨김 -->
+          <div class="subtaskContainer hidden">
+            <!-- 여기에 하위태스크 js 들어옴 -->
+            <div class="subtaskItem">
+              <input type="checkbox" class="subtaskCheck" />
+              <span class="subtaskText">하위 태스크 내용</span>
+              <button class="subtaskDelete">🗑︎</button>
+            </div>
+            <div class="subtaskItem">
+              <input type="checkbox" class="subtaskCheck" />
+              <span class="subtaskText">하위 태스크 내용2</span>
+              <button class="subtaskDelete">🗑︎</button>
+            </div>
+
+            <button class="addSubtaskBtn">+</button>
+          </div>
         </div>
+        <div class="currentTaskWrapper">
+          <div class="currentTaskContainer">
+            <!-- 여기에 main task가 js로 들어올 예정 -->
+            <div class="mainTaskEx">
+              <span class="mainTaskName">스터디 회의 준비2</span>
+              <div class="taskDueDate">종료일: 2025-04-10</div>
+            </div>
+            <div class="taskButtons">
+              <button class="edit">✎</button>
+              <!-- 접기/펼치기 버튼 -->
+              <button class="toggleSubtask">▼</button>
+            </div>
+          </div>
+
+          <!-- 하위 태스크: 기본은 숨김 -->
+          <div class="subtaskContainer hidden">
+            <!-- 여기에 하위태스크 js 들어옴 -->
+            <div class="subtaskItem">
+              <input type="checkbox" class="subtaskCheck" />
+              <span class="subtaskText">하위 태스크 내용</span>
+              <button class="subtaskDelete">🗑︎</button>
+            </div>
+            <div class="subtaskItem">
+              <input type="checkbox" class="subtaskCheck" />
+              <span class="subtaskText">하위 태스크 내용2</span>
+              <button class="subtaskDelete">🗑︎</button>
+            </div>
+
+            <button class="addSubtaskBtn">+</button>
+          </div>
+        </div>
+        <div class="currentTaskWrapper">
+          <div class="currentTaskContainer">
+            <!-- 여기에 main task가 js로 들어올 예정 -->
+            <div class="mainTaskEx">
+              <span class="mainTaskName">스터디 회의 준비2</span>
+              <div class="taskDueDate">종료일: 2025-04-10</div>
+            </div>
+            <div class="taskButtons">
+              <button class="edit">✎</button>
+              <!-- 접기/펼치기 버튼 -->
+              <button class="toggleSubtask">▼</button>
+            </div>
+          </div>
+
+          <!-- 하위 태스크: 기본은 숨김 -->
+          <div class="subtaskContainer hidden">
+            <!-- 여기에 하위태스크 js 들어옴 -->
+            <div class="subtaskItem">
+              <input type="checkbox" class="subtaskCheck" />
+              <span class="subtaskText">하위 태스크 내용</span>
+              <button class="subtaskDelete">🗑︎</button>
+            </div>
+            <div class="subtaskItem">
+              <input type="checkbox" class="subtaskCheck" />
+              <span class="subtaskText">하위 태스크 내용2</span>
+              <button class="subtaskDelete">🗑︎</button>
+            </div>
+
+            <button class="addSubtaskBtn">+</button>
+          </div>
+        </div>
+        <div class="currentTaskWrapper">
+          <div class="currentTaskContainer">
+            <!-- 여기에 main task가 js로 들어올 예정 -->
+            <div class="mainTaskEx">
+              <span class="mainTaskName">스터디 회의 준비2</span>
+              <div class="taskDueDate">종료일: 2025-04-10</div>
+            </div>
+            <div class="taskButtons">
+              <button class="edit">✎</button>
+              <!-- 접기/펼치기 버튼 -->
+              <button class="toggleSubtask">▼</button>
+            </div>
+          </div>
+
+          <!-- 하위 태스크: 기본은 숨김 -->
+          <div class="subtaskContainer hidden">
+            <!-- 여기에 하위태스크 js 들어옴 -->
+            <div class="subtaskItem">
+              <input type="checkbox" class="subtaskCheck" />
+              <span class="subtaskText">하위 태스크 내용</span>
+              <button class="subtaskDelete">🗑︎</button>
+            </div>
+            <div class="subtaskItem">
+              <input type="checkbox" class="subtaskCheck" />
+              <span class="subtaskText">하위 태스크 내용2</span>
+              <button class="subtaskDelete">🗑︎</button>
+            </div>
+
+            <button class="addSubtaskBtn">+</button>
+          </div>
+        </div>
+      </div>
       </section>
 
       <!-- 완료된 태스크 -->
@@ -130,7 +295,6 @@
           <div class="completedTaskItem">
             <div class="completedTaskTitle">할 일 제목</div>
             <div class="completedTaskDate">2025-04-07</div>
-          </div>
           </div>
         </div>
       </section>
