--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
 <body>
     <div id="todo-container"></div>
     <script src="script.js"></script>
+    <section class="complete">
+        <h3 class="sectionTitle">Completed Tasks</h3>
+        <hr />
+        <div class="completedTaskContainer"></div>
+    </section>
 </body>
 </html>
