--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Todo list</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="darkMode.css" />
-    <script src="script.js" defer></script>
   </head>
   <body>
     <!-- 헤더 -->
@@ -130,5 +129,9 @@
         </div>
       </section>
     </main>
+
+    <script src="script.js" defer></script>
+    <script src="subTask.js" defer></script>
+    <script src="currentTask.js" defer></script>
   </body>
 </html>
