--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
       </section>
     </main>
 
-    <script src="script.js" defer></script>
-    <script src="subTask.js" defer></script>
-    <script src="currentTask.js" defer></script>
+    <script type="module" src="script.js"></script>
+<!--    <script src="subTask.js" defer></script>-->
+<!--    <script src="currentTask.js" defer></script>-->
   </body>
 </html>
