--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     </head>
     <body>
         <header class="header">
+            <!-- css 적용을 위한 레이아웃 수정 -->
             <div class="header-left">
                 <input type="checkbox" id="toggle" hidden />
                 <label for="toggle" class="toggleSwitch">
