feat: user로고 추가

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <span class="toggleButton"></span>
             </label>
             <h2 class="title">No More Tomorrow Me🔥</h2>
+            <img src="user.png" onclick="mypage()"/>
         </header>
 
         <main>
