style: 불필요한 html 코드 삭제

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <span class="toggleButton"></span>
       </label>
       <h2 class="title">No More Tomorrow Me🔥</h2>
-      <img src="/asset/user.png" id="userIcon" />
+      <img src="asset/user.png" id="userIcon" />
     </header>
 
     <main>
@@ -58,7 +58,7 @@
           <div class="modalContent">
             <span class="closeBtn" id="closeBtn">x</span>
             <div class="modalHeader">
-              <img src="/asset/solid.svg" alt="profile" class="profileIcon" />
+              <img src="asset/solid.svg" alt="profile" class="profileIcon" />
               <p>SOLID 님</p>
             </div>
 
@@ -93,27 +93,6 @@
 
               <!-- 완료 태스크 내에 삭제된 데이터 -->
               <div class="modalComplete">
-                <p class="modalBodyHeader">Complete Delete Data</p>
-
-                <div class="modalCompleteItem">
-                  <div class="CompleteDeleteCard">
-                    <span class="CompleteTaskTitle">발표 준비</span>
-                    <span class="CompleteTaskDue">2025-04-29</span>
-                  </div>
-
-                  <div class="CompleteDeleteCard">
-                    <span class="CompleteTaskTitle">기획안 작성</span>
-                    <span class="CompleteTaskDue">2025-04-28</span>
-                  </div>
-                  <div class="CompleteDeleteCard">
-                    <span class="CompleteTaskTitle">기획안 작성</span>
-                    <span class="CompleteTaskDue">2025-04-28</span>
-                  </div>
-                  <div class="CompleteDeleteCard">
-                    <span class="CompleteTaskTitle">기획안 작성</span>
-                    <span class="CompleteTaskDue">2025-04-28</span>
-                  </div>
-                </div>
               </div>
             </div>
           </div>
