--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
 
                 <!-- 완료 태스크 내에 삭제된 데이터 -->
                 <div class="modalComplete">
+                  <p class="modalBodyHeader">Complete Delete Data</p>
+                  <div class="modalCompleteItem">
+
+                  </div>
                 </div>
               </div>
             </div>
