feat: user이미지 다크모드 추가

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <span class="toggleButton"></span>
       </label>
       <h2 class="title">No More Tomorrow Me🔥</h2>
-      <img src="asset/user.png" id="userIcon" />
+      <img src="asset/user.svg" class="userIcon" id="userIcon" />
     </header>
 
     <main>
